[Carz4Ljs] Safe use of transactions in export csv